<resources>
    <string name="app_name">AppDAW</string>
    <string name="developer_1">Daniela Alejandra   Vargas Palomino</string>
    <string name="developer">Desarrolladora</string>
    <string name="developer_2">Maribel  Vargas Exiga</string>
    <string name="developer_3">Emiliano  Aguilar Cerna</string>
    <string name="developer_man">Desarrollador</string>
    <string name="description_pop_up">How to Create a Custom Pop Up with Great UI in AndroidStudio</string>
    <string name="url_pop_up">Autor: Aws Rh   https://www.youtube.com/watch?v=0DH2tZjJtm0</string>
    <string name="description_layout_canaria">Design a Modern Simple Profile UI with Constraint Layout in Android Studio 3.1 Canary 6</string>
    <string name="url_layout_canaria">Autor: AndroUI   https://www.youtube.com/watch?v=CZ-qLoSdzwk</string>
    <string name="title_lesson3">Tema 3</string>
    <string name="msg_lesson3_unit1">Seguridad y vulnerabilidad.</string>
    <string name="title_lesson2">Tema 2</string>
    <string name="msg_lesson2_unit1">Medios digitales soportados en la web</string>
    <string name="title_lesson1">Tema 1</string>
    <string name="msg_lesson1_unit1">Introducción a las tecnologías web</string>
    <string name="title_unit1">Unidad I Ingeniería Web</string>
    <string name="title_unit2">Unidad II Arquitectura de la Información</string>
    <string name="msg_lesson1_unit2">Fundamentos de la arquitectura de la información</string>
    <string name="msg_lesson2_unit2">Usabilidad</string>
    <string name="msg_lesson3_unit2">Estructura de la información</string>
    <string name="title_lesson4">Tema 4</string>
    <string name="msg_lesson4_unit2">Patrones de diseño web</string>
    <string name="title_unit3">Unidad III Desarrollo Web</string>
    <string name="msg_lesson1_unit3">Integración de la aplicación web</string>
    <string name="msg_lesson2_unit3">Puesta en marcha</string>
    <string name="title_unit4">Unidad IV Comercio Electrónico</string>
    <string name="msg_lesson1_unit4">Conceptos Básicos de Comercio electrónico</string>
    <string name="msg_lesson2_unit4">Paradigmas del comercio Electrónico</string>
    <string name="title_unit5">Unidad V Web Móvil</string>
    <string name="msg_lesson1_unit5">Introducción a web móvil</string>
    <string name="msg_lesson2_unit5">Hojas de estilos para móvil</string>
    <string name="msg_lesson3_unit5">XHTML</string>
    <string name="close">X</string>
    <string name="title_unit_one">Unidad I</string>
    <string name="title_unit_two">Unidad II</string>
    <string name="title_unit_three">Unidad III</string>
    <string name="title_unit_four">Unidad IV</string>
    <string name="title_library">Bliblioteca</string>
    <string name="title_podcast">Podcast</string>
    <string name="title_notice">Noticias</string>
    <string name="title_tem">Temario</string>
    <string name="title_head_first_ruby">Head First Ruby</string>
    <string name="authors_book_hearfirst">Autor: Jay McGavren   Editorial: O\'REILLY</string>
    <string name="title_book_ecommerce">Fundamentos de Comercio Electrónico</string>
    <string name="authors_book_ecommerce">Autor: Gustavo Sebastián Torre y Darío Gabriel Codner   Editorial: Universidad Virtual de Quilmes, 2013</string>
    <string name="title_book_app_java">Desarrollo de Aplicaciones con Java</string>
    <string name="authors_book_app_java">Autor: Lic. Henry Terreno y Lic. Jose Paredes   Editorial: Fundación Código Libre Dominicano</string>
    <string name="title_book_app_web">Desarrollo de Aplicaciones Web</string>
    <string name="author_book_app_web">Autor: Carles Mateu   Editorial: Formación de Posgrado</string>
    <string name="title_book_java_design">Java Design Patterns</string>
    <string name="author_book_java_design">Autor: Rohit Joshi   Editorial: Java Code Geeks</string>
    <string name="title_activity_unit1_engineering_web">Unit1EngineeringWebActivity</string>
    <string name="objective_unit_engineering_web">Objetivo de la Unidad I El alumno comprenderá las diferentes tecnologías web existentes para seleccionar la adecuada de acuerdo a las necesidades de la empresa.</string>
    <string name="name_theme_one">Introducción a las tecnologías web.</string>
    <string name="name_theme_two">Medios digitales soportados en la web.</string>
    <string name="name_theme_three">Seguridad y vulnerabilidad.</string>
    <string name="info_introduction_web">Identificar los conceptos básicos de las tecnologías web actuales así como las tecnologías de desarrollo ASP, JSP, PHP.</string>
    <string name="info_theme_digital_media">Reconocer los diferentes medios digitales soportados por web tales como imágenes, audio, video.</string>
    <string name="info_theme_security">Reconocer las diferentes medidas de seguridad para el desarrollo de un sitio y/o aplicación web</string>
    <string name="enter_email">Escribe tu correo</string>
    <string name="enter_password">Escribe tu contraseña</string>
    <string name="registar">Registrarse</string>
    <string name="login">Entrar</string>
    <string name="temario">Entrar sin registrar</string>
    <string name="cannot_signin">No se pudo iniciar sesión</string>
    <string name="open">Open</string>
    <string name="closes">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_unit3_development_web">Unit3DevelopmentWebActivity</string>
    <string name="title_activity_unit2_architecture_information">Unit2ArchitectureInformationActivity</string>
    <string name="name_theme_fundamentals_information">Fundamentos de la arquitectura de la información.</string>
    <string name="name_theme_usability">Usabilidad.</string>
    <string name="name_theme_structure_information">Estructura de la información.</string>
    <string name="name_theme_web_design_patterns">Patrones de diseño web.</string>
    <string name="information_theme_one">Reconocer los conceptos, fundamentos, procesos y funciones de la arquitectura de la información.</string>
    <string name="informate_theme_two">Definir el concepto de usabilidad.</string>
    <string name="informate_theme_three">Reconocer los tipos de estructura de la información (lineal, jerárquica, red).</string>
    <string name="informate_theme_four">Identificar los patrones de diseño que son aplicables a web.</string>
    <string name="description_theme_usability">La usabilidad es el estudio y mejora de la forma en que los usuarios navegan, buscan información o interactúan con un servicio web. Aplica un conjunto de técnicas para identificar y solucionar estos problemas. \n \n Se utiliza en procesos de diseño y en procesos de evaluación. \n  * Entrevistas \n * Cuestionarios.  \n * Observación.  \n * Inspecciones. \n  * Control de acciones. \n  * Análisis de tareas. \n  * Grupos de enfoque. \n * Evaluación heurística por expertos. \n  * Control de movimiento visual.</string>
    <string name="description_theme_structure_information">Los sitios web son sistemas hipermedia: conjuntos de páginas interrelacionadas por enlaces unidireccionales. Cada una de las páginas puede contener sub-elementos con entidad propia, contenidos multimedia y herramientas interactivas.\n \nLa Estructura del sitio web se refiere precisamente a las conexiones y relaciones entre páginas, a su topología. \n \nUn sitio web puede encontrarse estructurado de forma muy diversa, solapar diferentes tipos de estructuras y contener subestructuras diferentes a la estructura general.</string>
    <string name="description_theme_web_design_patterns">El patrón de diseño web es un aspecto del diseño visual por el que se determina la disposición general de los elementos del sitio web en el área de visualización determinado por el navegador. \n  Un Patrón de Diseño (design pattern) es una solución repetible a un problema  recurrente en el diseño de software. Reflejan todo el rediseño y remodificación que los desarrolladores han ido haciendo a medida que intentaban conseguir mayor reutilización y flexibilidad en su software. \n \nLos patrones documentan y explican problemas de diseño, y luego discuten una buena solución a dicho problema. Con el tiempo, los patrones comienzan a incorporarse al conocimiento y experiencia colectiva de la industria del software. \n \nLos patrones de diseño proveen una forma efectiva para compartir experiencia con la comunidad de programadores de software orientado a objetos. \n Existen diversas maneras de agrupar los patrones de diseño. Quizá la más extendida es agruparlos según su propósito. </string>
    <string name="object_unit_architecture_information">El objetivo es introducir los fundamentos de la arquitectura de información (AI), es decir, los principios y cimientos de la disciplina. Para estructurar el contenido sobre el tema “Arquitectura de información en entornos web”.</string>
    <string name="objective_engineering_web">La ingeniería web es la aplicación de metodologías sistemáticas, disciplinadas y cuantificables al desarrollo eficiente, operación y evolución de aplicaciones de alta calidad en la World Wide Web.</string>
    <string name="part_three_object_engineering">El alumno comprenderá las diferentes tecnologías web existentes para seleccionar la adecuada de acuerdo a las necesidades de la empresa.</string>
    <string name="description_theme_one">El desarrollo de aplicaciones web ha evolucionado enormemente en la última década ha tenido como resultado que hay una gran cantidad de tecnologías, librerías, herramientas y estilos arquitectónicos para desarrollar una aplicación web. \n \nTecnologías del servidor existen multitud de tecnologías de construcción de aplicaciones en el servidor. \nLas más usadas son: PHP, Java EE, ASP.NET. Menos usadas: Ruby on Rails, Grails (Groovy), Django (Python), Perl, ColdFusion, muchas más.</string>
    <string name="action_out">Salir</string>
    <string name="msg_word">Escribe una letra para buscarla</string>
    <string name="search_word">Buscar Letra</string>
    <string name="next_word">Siguiente Palabra</string>
    <string name="msg_life">Vidas: 3</string>
    <string name="msg_points">Puntos: 0</string>
    <string name="msg_correct">CORRECTO</string>
    <string name="msg_incorrect">INCORRECTO</string>
    <string name="msg_answer">Ingrese la respuesta correcta</string>
    <string name="msg_confirm">Confirmar</string>
    <string name="msg_score">Aciertos</string>
    <string name="msg_question">Which thing is alive?</string>
    <string name="msg_answer_one">bird</string>
    <string name="msg_answer_two">door</string>
    <string name="msg_answer_three">rock</string>
    <string name="msg_qualify">Calificar</string>
    <string name="msg_title_result">Calificación obtenida</string>
    <string name="msg_content">Contenido</string>
    <string name="msg_return">Regresar</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_videos">Videos</string>
    <string name="title_plays">Juegos</string>
    <string name="title_exercises">Ejercicios</string>
    <string name="title_concepts">Conceptos</string>
    <string name="title_themes">Temas</string>
    <string name="exercise_one">Ejercicio 1</string>
    <string name="exercise_two">Ejercicio 2</string>
    <string name="exercise_three">Ejercicio 3</string>
    <string name="exercise_four">Ejercicio 4</string>
    <string name="title_exercises_unit_two">Unidad II \nArquitectura de la Información</string>
</resources>