<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.utng.juniorsmed.appdaw.activity.UnitOneActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_unit_one"
                android:textSize="25dp"
                android:textColor="@color/colorPrimary"/>


            <Button
                android:id="@+id/btn_menu_themes"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/blue_one"
                android:text="@string/title_themes"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btn_menu_concepts"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/Bblue"
                android:text="@string/title_concepts"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_menu_exercises"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/ligth_Bblue"
                android:text="@string/title_exercises"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_menu_games"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/blue_one"
                android:text="@string/title_plays"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_menu_videos"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/Bblue"
                android:text="@string/title_videos"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_menu_quiz_one"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/ligth_Bblue"
                android:text="@string/title_quiz"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
