<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/duela"
    tools:context="mx.utng.juniorsmed.appdaw.activity.PlayGameThreeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_life"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="left"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_accountant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_points"
                android:fontFamily="@font/tp_word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="right"
                android:textSize="20dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/question_one" />

        <TextView
            android:id="@+id/txt_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_correct"
            android:fontFamily="@font/tp_word"
            android:textSize="20dp"
            android:textColor="@color/yello"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_incorrect"
            android:fontFamily="@font/tp_word"
            android:textSize="20dp"
            android:textColor="@color/yello"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_answer"
            android:fontFamily="@font/tp_word"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_confirm"
            android:fontFamily="@font/tp_word"
            android:background="@color/yello"/>

    </LinearLayout>

</RelativeLayout>
