<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/road"
    tools:context="mx.utng.juniorsmed.appdaw.activity.ScoreThreeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_title_result"
        android:fontFamily="@font/tp_word"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/medal"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_content"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/tp_word"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

        <Button
            android:id="@+id/btn_return_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_return"
            android:textColor="@color/white"
            android:fontFamily="@font/tp_word"
            android:background="@color/colorBlue"
            android:alpha="0.8"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
